syntax = "proto3";

package SCPDiscord.Interface;

message KickCommand
{
	uint64 channelID = 1;
	string steamID = 2;
	string reason = 3;
	string adminTag = 4;
	uint64 interactionID = 5;
	string interactionToken = 6;
}