syntax = "proto3";

package SCPDiscord.Interface;

message KickallCommand
{
	uint64 channelID = 1;
	string reason = 2;
	string adminTag = 3;
	uint64 interactionID = 4;
	string interactionToken = 5;
}