syntax = "proto3";

package SCPDiscord.Interface;

message ListCommand
{
	uint64 channelID = 1;
	uint64 userID = 2;
	uint64 interactionID = 3;
}