syntax = "proto3";

package SCPDiscord.Interface;

message SyncRoleCommand
{
	uint64 channelID = 1;
	uint64 discordID = 2;
	string steamIDOrIP = 3;
	string discordTag = 4;
	uint64 interactionID = 5;
}