syntax = "proto3";

package SCPDiscord.Interface;

message UnbanCommand
{
	uint64 channelID = 1;
	string steamIDOrIP = 2;
	uint64 interactionID = 3;
}