syntax = "proto3";

import "PluginToBot/EmbedMessage.proto";

package SCPDiscord.Interface;

message PaginatedMessage
{
	uint64 channelID = 1;
	uint64 userID = 2;
	uint64 interactionID = 3;
	repeated EmbedMessage pages = 4;
}